--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -28,7 +28,7 @@
         <div class="chat-messages"></div>
       </main>
       <div class="chat-form-container">
-        <form id="chat-form">
+        <form id="chat-form" >
           <input
             id="msg"
             type="text"
@@ -47,6 +47,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="js/main.js"></script>
+    <script src="/js/main.js"></script>
   </body>
 </html>
